--- a/tasks/add-sshkey.yaml
+++ b/tasks/add-sshkey.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: add ssh key to specified host
+  typeRef: cluster
   variables:
     keycontent:
       display: SSH Key
