--- a/tasks/install-nerdctl.yaml
+++ b/tasks/install-nerdctl.yaml
@@ -4,6 +4,7 @@ metadata:
   name: install-nerdctl
   namespace: ops-system
 spec:
+  typeRef: cluster
   desc: install nerdctl tool in specified host
   variables:
     proxy: 
