--- a/tasks/list-process-byio.yaml
+++ b/tasks/list-process-byio.yaml
@@ -4,6 +4,7 @@ metadata:
   name: list-process-byio
   namespace: ops-system
 spec:
+  typeRef: cluster
   desc: list process by io in node
   variables:
     topk: 
