--- a/tasks/add-localbinpath.yaml
+++ b/tasks/add-localbinpath.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: add /usr/local/bin to PATH for specified host
+  typeRef: cluster
   steps:
     - name: Set /usr/local/bin to PATH
       content: echo "export PATH=$PATH:/usr/local/bin" >> /etc/profile
