--- a/tasks/check-gpu-drop.yaml
+++ b/tasks/check-gpu-drop.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: check the gpu card dropped in specified host
+  typeRef: cluster
   variables:
     desired_gpu_count: 
       default: "8"
