--- a/tasks/check-npu-drop.yaml
+++ b/tasks/check-npu-drop.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: check the npu card dropped in specified host
+  typeRef: cluster
   variables:
     desired_npu_count: 
       default: "16"
