--- a/tasks/cordon-node.yaml
+++ b/tasks/cordon-node.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: cordon node in cluster
+  typeRef: cluster
   nodeName: anymaster
   variables:
     node:
