--- a/tasks/get-gpu-status.yaml
+++ b/tasks/get-gpu-status.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: get gpu status using nvidia-smi in specified host
+  typeRef: cluster
   steps:
     - name: Check nvidia-smi
       content: command -v nvidia-smi
