--- a/tasks/get-npu-status.yaml
+++ b/tasks/get-npu-status.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: get npu status using npu-smi in specified host
+  typeRef: cluster
   steps:
     - name: Check npu-smi
       content: command -v npu-smi
