--- a/tasks/inspect-clusterip.yaml
+++ b/tasks/inspect-clusterip.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: ops-system
 spec:
   desc: get clusterip details in cluster
+  typeRef: cluster
   nodeName: anymaster
   variables:
     clusterip:
