--- a/tasks/push-file.yaml
+++ b/tasks/push-file.yaml
@@ -4,6 +4,7 @@ metadata:
   name: push-file
   namespace: ops-system
 spec:
+  typeRef: cluster
   desc: push local file to remote file example
   steps:
     - name: Push To Remote
