--- a/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
@@ -50,16 +50,16 @@ spec:
                       type: boolean
                     name:
                       type: string
+                    ref:
+                      type: string
                     runAlways:
                       type: boolean
-                    taskRef:
-                      type: string
                     variables:
                       additionalProperties:
                         type: string
                       type: object
                   required:
-                  - name
+                  - ref
                   type: object
                 type: array
               ttlSecondsAfterFinished:
