--- a/pipelines/cluster-uncordon-node.yaml
+++ b/pipelines/cluster-uncordon-node.yaml
@@ -19,6 +19,6 @@ spec:
       required: true
   tasks:
     - name: 检查节点是否存在
-      taskRef: check-node-existed
+      ref: check-node-existed
     - name: 恢复节点
-      taskRef: uncordon-node
+      ref: uncordon-node
