--- a/tasks/alert-gpu-drop.yaml
+++ b/tasks/alert-gpu-drop.yaml
@@ -61,7 +61,7 @@ spec:
                   # 2. check count from nvidia-smi
                   output = ''
                   try:
-                      output = subprocess.check_output(['nvidia-smi' , '-L'], universal_newlines=True)
+                      output = subprocess.run(['nvidia-smi' , '-L'], universal_newlines=True, stdout=subprocess.PIPE).stdout
                   except:
                       pass
                   card_count = 0
@@ -76,7 +76,7 @@ spec:
                       error_message += build_error_message('gpu count mismatch: %d (desired %d)' % (card_count, desired_card_count))
                       raise Exception(error_message)
                   # 3. lspci check
-                  output = subprocess.check_output(['lspci'], universal_newlines=True)
+                  output = subprocess.run(['lspci'], universal_newlines=True, stdout=subprocess.PIPE).stdout
                   card_count = 0
                   lines = [line for line in output.split('\n') if 'controller: NVIDIA Corporation' in line and 'USB' not in line]
                   for index, line in enumerate(lines):
