--- a/Dockerfile-Cli
+++ b/Dockerfile-Cli
@@ -5,6 +5,6 @@ RUN make cli
 
 FROM hubimage/runtime-ubuntu:22.04
 WORKDIR /
-COPY --from=builder /workspace/bin/opscli /bin/opscli
+COPY --from=builder /workspace/bin/opscli /usr/local/bin/opscli
 COPY --from=builder /workspace/tasks /root/.ops/tasks
 COPY --from=builder /workspace/tasks /root/.ops/pipelines
