--- a/tasks/alert-gpu-drop.yaml
+++ b/tasks/alert-gpu-drop.yaml
@@ -9,8 +9,6 @@ spec:
         alert-gpu: enabled
     typeRef: host
     variables:
-        desired_card_count:
-            default: "8"
         cluster:
             default: default
         notifaction:
@@ -28,7 +26,7 @@ spec:
               cluster = '${cluster}'
               hostname = '${hostname}'
               notifaction = '${notifaction}'
-              desired_card_count = int('${desired_card_count}')
+              desired_card_count = int('${card-num}')
 
               card_id = ''
               reason = '掉卡'
