--- a/tasks/clear-disk.yaml
+++ b/tasks/clear-disk.yaml
@@ -22,9 +22,10 @@ spec:
       content: find /var/log -type f -name "*.log" -size +100M -exec rm -f {} \; 2>/dev/null || true
     - name: clear jfs cache
       content: |
-        find /data/jfs/cache2/mem -maxdepth 1 -type d -atime +15 -exec rm -rf {} + 2>/dev/null || true
-        find /var/lib/jfs/cache -maxdepth 1 -type d -atime +15 -exec rm -rf {} + 2>/dev/null || true
-        find /var/lib/jfs/cache2 -maxdepth 1 -type d -atime +15 -exec rm -rf {} + 2>/dev/null || true
+        find /data/jfs/cache2/mem/*/raw -maxdepth 1 -type d -atime +30 -exec rm -rf {} + 2>/dev/null || true
+        find /var/lib/jfs/cache/*/raw -maxdepth 1 -type d -atime +30 -exec rm -rf {} + 2>/dev/null || true
+        find /var/lib/jfs/cache2/*/raw -maxdepth 1 -type d -atime +30 -exec rm -rf {} + 2>/dev/null || true
+        find /data/jfs/*/raw -maxdepth 1 -type d -atime +30 -exec rm -rf {} + 2>/dev/null || true
     - name: after clear
       content: |
         timeout 5 df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
