--- a/tasks/alert-gpu-fabric.yaml
+++ b/tasks/alert-gpu-fabric.yaml
@@ -18,6 +18,7 @@ spec:
       content: |
         #!/usr/bin/python
         import os
+        import subprocess
         import requests
         import json
         from datetime import datetime, timedelta
@@ -43,7 +44,32 @@ spec:
             response = requests.request('POST', notifaction, headers=headers, data=json.dumps(payload))
             print(response.text)
 
+        def is_fabricmanager_installed():
+            try:
+                result = subprocess.run(['systemctl', 'list-unit-files', '--type=service'], stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)
+                if 'nvidia-fabricmanager.service' in result.stdout:
+                    return True
+                return False
+            except Exception as e:
+                return False
+
+        def check_fabricmanager_status():
+            try:
+                result = subprocess.run(['systemctl', 'is-active', 'nvidia-fabricmanager'], stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)
+                if result.stdout.strip() != 'active':
+                    return False
+                return True
+            except Exception as e:
+                return False
+
         try:
+            if not is_fabricmanager_installed():
+                print('fabricmanager服务未安装')
+                exit(0)
+            if not check_fabricmanager_status():
+                error_message += 'status is not running\n'
+                raise Exception(error_message)
+
             log_file = '/var/log/fabricmanager.log'
             if not os.path.exists(log_file):
                 print('日志文件不存在')
