--- a/tasks/get-pod.yaml
+++ b/tasks/get-pod.yaml
@@ -1,10 +1,10 @@
 apiVersion: crd.chenshaowen.com/v1
 kind: Task
 metadata:
-  name: inspect-pod
+  name: get-pod
   namespace: ops-system
 spec:
-  desc: get pod details in cluster
+  desc: get pod status
   nodeName: anymaster
   typeRef: cluster
   variables:
@@ -15,5 +15,5 @@ spec:
       display: pod name
       required: true
   steps:
-    - name: get pod details info
-      content: kubectl describe pod ${podname} -n ${namespace}
+    - name: get pod status
+      content: kubectl get pod ${podname} -n ${namespace}
