--- a/tasks/cron-clear-disk.yaml
+++ b/tasks/cron-clear-disk.yaml
@@ -9,10 +9,18 @@ spec:
     managed-by: ops
   typeRef: host
   steps:
-    - name: clear > 100M log
-      content: find /var/log -type f -name "*.log" -size +100M -exec rm -f {} \; 2>/dev/null || true
+    - name: before clear
+      content: |
+        timeout 5 df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
+    - name: clear > 100M log in /var/log
+      content: find /var/log -type f -name "*.log" -size +100M -exec sh -c 'for file do echo "cleaned $file" >&2; echo "" > "$file"; done' sh {} +
+    - name: clear > 100M log in /data/run
+      content: find /data/run -type f -name "*.log" -size +50M -exec sh -c 'for file do echo "cleaned $file" >&2; echo "" > "$file"; done' sh {} +
     - name: clear jfs cache
       content: |
-        find /data/jfs/cache2/mem -maxdepth 1 -type d -atime +15 -exec rm -rf {} + 2>/dev/null || true
-        find /var/lib/jfs/cache -maxdepth 1 -type d -atime +15 -exec rm -rf {} + 2>/dev/null || true
-        find /var/lib/jfs/cache2 -maxdepth 1 -type d -atime +15 -exec rm -rf {} + 2>/dev/null || true
+        find /data/jfs/cache2/ -maxdepth 7 -type d -ctime +7 -exec rm -rf {} + 2>/dev/null || true
+        find /var/lib/jfs/cache/ -maxdepth 7 -type d -ctime +7 -exec rm -rf {} + 2>/dev/null || true
+        find /var/lib/jfs/cache2/ -maxdepth 7 -type d -ctime +7 -exec rm -rf {} + 2>/dev/null || true
+    - name: after clear
+      content: |
+        timeout 5 df -H | grep -vE '^Filesystem|tmpfs|cdrom|loop|udev' | awk '{ print $5 "/" $2 " " $1 }' |grep " "/
