improvement docs and image

--- a/charts/ops/templates/deployment.yaml
+++ b/charts/ops/templates/deployment.yaml
@@ -60,6 +60,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: DEFAULT_RUNTIME_IMAGE
+              value: ac2-registry.cn-hangzhou.cr.aliyuncs.com/ac2/base:ubuntu22.04
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
