--- a/tasks/clear-pod.yaml
+++ b/tasks/clear-pod.yaml
@@ -10,4 +10,4 @@ spec:
   steps:
     - name: clear ops task pod
       content: |
-        kubectl get pods --all-namespaces | grep -E 'CreateContainerConfigError|UnexpectedAdmissionError|ImagePullBackOff|CrashLoopBackOff|Error|ContainerStatusUnknown|Evicted|Terminating|OOMKilled' | awk '{print $1, $2}' | xargs -n2 -P 10 sh -c 'kubectl delete pod $1 -n $0 --force --grace-period=0'
+        kubectl get pods --all-namespaces | grep -E 'CreateContainerConfigError|UnexpectedAdmissionError|ImagePullBackOff|CrashLoopBackOff|Error|ContainerStatusUnknown|Evicted|Terminating|OOMKilled|ImageInspectError' | awk '{print $1, $2}' | xargs -n2 -P 10 sh -c 'kubectl delete pod $1 -n $0 --force --grace-period=0'
