--- a/tasks/collect-gpu-log.yaml
+++ b/tasks/collect-gpu-log.yaml
@@ -28,7 +28,7 @@ spec:
       content: |
         rm -rf /tmp/col-gpu-log-${random} || true
         mkdir -p /tmp/col-gpu-log-${random} && cd /tmp/col-gpu-log-${random}
-        curl -sfL https://mirror.ghproxy.com/https://raw.githubusercontent.com/shaowenchen/hubimage/main/ai/col_gpu_log.sh | bash
+        curl -sfL https://ghp.ci/https://raw.githubusercontent.com/shaowenchen/hubimage/main/ai/col_gpu_log.sh | bash
         mv *.tar.gz ${hostname}-col-gpu-log-${random}.tar.gz
     - name: upload to s3
       remotefile: s3://collect-gpu-log/${hostname}-col-gpu-log-${random}.tar.gz
