--- a/tasks/install-nydus.yaml
+++ b/tasks/install-nydus.yaml
@@ -8,7 +8,7 @@ spec:
   desc: install nydus kit in specified host
   variables:
     proxy: 
-      default: https://mirror.ghproxy.com/
+      default: https://ghp.ci/
     version: 
       default: 2.2.4
     rpcversion: 
