--- a/tasks/velero-install.yaml
+++ b/tasks/velero-install.yaml
@@ -11,7 +11,7 @@ spec:
     velero_version: 
       default: v1.9.2
     download_url: 
-      default: https://mirror.ghproxy.com/https://github.com/vmware-tanzu/velero/releases/download/${velero_version}/velero-${velero_version}-linux-amd64.tar.gz
+      default: https://ghp.ci/https://github.com/vmware-tanzu/velero/releases/download/${velero_version}/velero-${velero_version}-linux-amd64.tar.gz
     region: 
       required: true
     endpoint: 
