--- a/tasks/create-dataload.yaml
+++ b/tasks/create-dataload.yaml
@@ -28,6 +28,7 @@ spec:
           generateName: ${dataset}-
           namespace: ${namespace}
         spec:
+          ttlSecondsAfterFinished: 86400
           dataset:
             name: ${dataset}
             namespace: ${namespace}
