--- a/tasks/clear-kubernetes.yaml
+++ b/tasks/clear-kubernetes.yaml
@@ -13,23 +13,23 @@ spec:
       required: true
   steps:
     - name: clear Evicted pod
-      content: kubectl get pods ${namespace} -o wide | grep Evicted | awk '{print $1,$2}' | xargs -L1 kubectl delete pod --grace-period=0 --force -n
+      content: kubectl get pods -n ${namespace} -o wide | grep Evicted | awk '{print $1}' | xargs -r -L1 kubectl delete pod -n ${namespace} --grace-period=0 --force
       allowfailure: "true"
     - name: clear Error pod
-      content: kubectl get pods ${namespace} -o wide | grep Error | awk '{print $1,$2}' | xargs -L1 kubectl delete pod --grace-period=0 --force -n
+      content: kubectl get pods -n ${namespace} -o wide | grep Error | awk '{print $1}' | xargs -r -L1 kubectl delete pod -n ${namespace} --grace-period=0 --force
       allowfailure: "true"
     - name: clear Completed pod
-      content: kubectl get pods ${namespace} -o wide | grep Completed | awk '{print $1,$2}' | xargs -L1 kubectl delete pod --grace-period=0 --force -n
+      content: kubectl get pods -n ${namespace} -o wide | grep Completed | awk '{print $1}' | xargs -r -L1 kubectl delete pod -n ${namespace} --grace-period=0 --force
       allowfailure: "true"
     - name: clear ErrImagePull pod
-      content: kubectl get pods ${namespace} -o wide | grep ErrImagePull | awk '{print $1,$2}' | xargs -L1 kubectl delete pod --grace-period=0 --force -n
+      content: kubectl get pods -n ${namespace} -o wide | grep ErrImagePull | awk '{print $1}' | xargs -r -L1 kubectl delete pod -n ${namespace} --grace-period=0 --force
       allowfailure: "true"
     - name: clear ImagePullBackOff pod
-      content: kubectl get pods ${namespace} -o wide | grep ImagePullBackOff | awk '{print $1,$2}' | xargs -L1 kubectl delete pod --grace-period=0 --force -n
+      content: kubectl get pods -n ${namespace} -o wide | grep ImagePullBackOff | awk '{print $1}' | xargs -r -L1 kubectl delete pod -n ${namespace} --grace-period=0 --force
       allowfailure: "true"
     - name: clear CrashLoopBackOff pod
-      content: kubectl get pods ${namespace} -o wide | grep CrashLoopBackOff | awk '{print $1,$2}' | xargs -L1 kubectl delete pod --grace-period=0 --force -n
+      content: kubectl get pods -n ${namespace} -o wide | grep CrashLoopBackOff | awk '{print $1}' | xargs -r -L1 kubectl delete pod -n ${namespace} --grace-period=0 --force
       allowfailure: "true"
     - name: clear Terminating pod
-      content: kubectl get pods ${namespace} -o wide | grep Terminating | awk '{print $1,$2}' | xargs -L1 kubectl delete pod --grace-period=0 --force -n
+      content: kubectl get pods -n ${namespace} -o wide | grep Terminating | awk '{print $1}' | xargs -r -L1 kubectl delete pod -n ${namespace} --grace-period=0 --force
       allowfailure: "true"
