--- a/tasks/alert-cluster-pod.yaml
+++ b/tasks/alert-cluster-pod.yaml
@@ -5,14 +5,15 @@ metadata:
     namespace: ops-system
 spec:
     desc: alert cluster pod
-    host: anymaster
+    nodeName: anymaster
+    typeRef: cluster
     variables:
-        threshold:
+        max:
             default: "20"
         cluster:
             default: default
-        eventBus:
-            value: http://myops-server/api/v1/events/inspection
+        notifaction:
+            required: true
     steps:
         - name: alert cluster pod
           content: |
@@ -23,23 +24,24 @@ spec:
               import json
               from datetime import datetime
 
-              value = ''
-              reason = ''
+              cluster = '${cluster}'
+              notifaction = '${notifaction}'
 
-              def send(value, reason):
+              error_message = ''
+              reason = '异常Pod数量超过阈值'
+              threshold = int("${max}")
+
+              def send(message):
                   payload = {
-                      'cluster': '${CLUSTER}',
-                      'host': '${hostname}',
-                      'kind': 'cluster-pod',
-                      'threshold': '${threshold}',
-                      'operator': '<',
-                      'value': value,
-                      'reason': '',
+                      'msgtype': 'text',
+                      'text': {
+                          'content': message
+                      }
                   }
                   headers = {
                       'Content-Type': 'application/json'
                   }
-                  response = requests.request('POST', '${eventBus}', headers=headers, data=json.dumps(payload))
+                  response = requests.request('POST', notifaction, headers=headers, data=json.dumps(payload))
                   print(response.text)
 
               def get_pod_status():
@@ -67,7 +69,18 @@ spec:
                   
                   return abnormal_pods
 
-              abnormal_pods = count_abnormal_pods(pods)
-              value = len(abnormal_pods)
-
-              send(value, reason)
+              try:
+                  pods = get_pod_status()
+                  if pods:
+                      abnormal_pods = count_abnormal_pods(pods)
+                      if len(abnormal_pods) > threshold:
+                          error_message += f"异常Pod数量: {len(abnormal_pods)}\n"
+                          for ns, pod, r in abnormal_pods:
+                              error_message += f"{ns}/{pod} {r}\n"
+              except Exception as e:
+                  if len(error_message) == 0:
+                      error_message = str(e)
+              finally:
+                  if len(abnormal_pods) > threshold:
+                      error_message = f'集群: {cluster} \n{error_message}异常判断: {reason}\n'
+                      send(error_message)
